--- a/RestoAPP/RestoAPP/RestoAPP.csproj
+++ b/RestoAPP/RestoAPP/RestoAPP.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <Content Include="PantallaMenu.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -85,6 +86,13 @@
     <Compile Include="MasterResto.Master.designer.cs">
       <DependentUpon>MasterResto.Master</DependentUpon>
     </Compile>
+    <Compile Include="PantallaMenu.aspx.cs">
+      <DependentUpon>PantallaMenu.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PantallaMenu.aspx.designer.cs">
+      <DependentUpon>PantallaMenu.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -96,6 +104,16 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dominio\Dominio.csproj">
+      <Project>{0190da8a-f9d5-414f-bbf0-0471674ab461}</Project>
+      <Name>Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NegocioResto\NegocioResto.csproj">
+      <Project>{dca2dc67-f948-4725-94e9-e8355c062efb}</Project>
+      <Name>NegocioResto</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
