--- a/RestoAPP/Dominio/Dominio.csproj
+++ b/RestoAPP/Dominio/Dominio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bebidas.cs" />
+    <Compile Include="Login.cs" />
     <Compile Include="Pedidos.cs" />
     <Compile Include="Empleados.cs" />
     <Compile Include="Menu.cs" />
