--- a/RestoAPP/NegocioResto/NegocioResto.csproj
+++ b/RestoAPP/NegocioResto/NegocioResto.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
+    <Compile Include="LecturaUsuario.cs" />
     <Compile Include="ListaMenu.cs" />
+    <Compile Include="NegocioEmpleados.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
