--- a/RestoAPP/RestoAPP/RestoAPP.csproj
+++ b/RestoAPP/RestoAPP/RestoAPP.csproj
@@ -67,11 +67,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AccesoEmpleados.aspx" />
     <Content Include="Default.aspx" />
+    <Content Include="MiPerfil.aspx" />
     <Content Include="PantallaMenu.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccesoEmpleados.aspx.cs">
+      <DependentUpon>AccesoEmpleados.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AccesoEmpleados.aspx.designer.cs">
+      <DependentUpon>AccesoEmpleados.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -85,6 +94,13 @@
     </Compile>
     <Compile Include="MasterResto.Master.designer.cs">
       <DependentUpon>MasterResto.Master</DependentUpon>
+    </Compile>
+    <Compile Include="MiPerfil.aspx.cs">
+      <DependentUpon>MiPerfil.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MiPerfil.aspx.designer.cs">
+      <DependentUpon>MiPerfil.aspx</DependentUpon>
     </Compile>
     <Compile Include="PantallaMenu.aspx.cs">
       <DependentUpon>PantallaMenu.aspx</DependentUpon>
