--- a/RestoAPP/NegocioResto/NegocioResto.csproj
+++ b/RestoAPP/NegocioResto/NegocioResto.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
+    <Compile Include="ListaBebidas.cs" />
     <Compile Include="LecturaUsuario.cs" />
     <Compile Include="ListaMenu.cs" />
     <Compile Include="NegocioEmpleados.cs" />
