--- a/RestoAPP/NegocioResto/NegocioResto.csproj
+++ b/RestoAPP/NegocioResto/NegocioResto.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ListaBebidas.cs" />
     <Compile Include="LecturaUsuario.cs" />
     <Compile Include="ListaMenu.cs" />
+    <Compile Include="ListaPrincipal.cs" />
     <Compile Include="NegocioEmpleados.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
