--- a/RestoAPP/RestoAPP/RestoAPP.csproj
+++ b/RestoAPP/RestoAPP/RestoAPP.csproj
@@ -70,15 +70,14 @@
     <Content Include="AccesoEmpleados.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Error.aspx" />
-    <Content Include="ListarPedido.aspx" />
     <Content Include="MesasUser.aspx" />
-    <Content Include="MiPerfil.aspx" />
     <Content Include="PantallaCargaEmpleados.aspx" />
     <Content Include="PantallaEmpleados.aspx" />
     <Content Include="PantallaMenu.aspx" />
     <Content Include="PantallaModMenu.aspx" />
     <Content Include="PantallaPedidos.aspx" />
     <Content Include="PantModBebidas.aspx" />
+    <Content Include="PerfilSession.aspx" />
     <Content Include="StyleSheet1.css" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -104,13 +103,6 @@
     <Compile Include="Error.aspx.designer.cs">
       <DependentUpon>Error.aspx</DependentUpon>
     </Compile>
-    <Compile Include="ListarPedido.aspx.cs">
-      <DependentUpon>ListarPedido.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="ListarPedido.aspx.designer.cs">
-      <DependentUpon>ListarPedido.aspx</DependentUpon>
-    </Compile>
     <Compile Include="MasterResto.Master.cs">
       <DependentUpon>MasterResto.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -124,13 +116,6 @@
     </Compile>
     <Compile Include="MesasUser.aspx.designer.cs">
       <DependentUpon>MesasUser.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="MiPerfil.aspx.cs">
-      <DependentUpon>MiPerfil.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="MiPerfil.aspx.designer.cs">
-      <DependentUpon>MiPerfil.aspx</DependentUpon>
     </Compile>
     <Compile Include="PantallaCargaEmpleados.aspx.cs">
       <DependentUpon>PantallaCargaEmpleados.aspx</DependentUpon>
@@ -173,6 +158,13 @@
     </Compile>
     <Compile Include="PantModBebidas.aspx.designer.cs">
       <DependentUpon>PantModBebidas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PerfilSession.aspx.cs">
+      <DependentUpon>PerfilSession.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PerfilSession.aspx.designer.cs">
+      <DependentUpon>PerfilSession.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
