--- a/RestoAPP/RestoAPP/RestoAPP.csproj
+++ b/RestoAPP/RestoAPP/RestoAPP.csproj
@@ -71,6 +71,7 @@
     <Content Include="CSS\StyleSheet1.css" />
     <Content Include="Error.aspx" />
     <Content Include="MesasUser.aspx" />
+    <Content Include="Mod_AgregarMesas.aspx" />
     <Content Include="PantallaCargaEmpleados.aspx" />
     <Content Include="PantallaEmpleados.aspx" />
     <Content Include="PantallaMenu.aspx" />
@@ -110,6 +111,13 @@
     </Compile>
     <Compile Include="MesasUser.aspx.designer.cs">
       <DependentUpon>MesasUser.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Mod_AgregarMesas.aspx.cs">
+      <DependentUpon>Mod_AgregarMesas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mod_AgregarMesas.aspx.designer.cs">
+      <DependentUpon>Mod_AgregarMesas.aspx</DependentUpon>
     </Compile>
     <Compile Include="PantallaCargaEmpleados.aspx.cs">
       <DependentUpon>PantallaCargaEmpleados.aspx</DependentUpon>
